--- a/views/home.ejs
+++ b/views/home.ejs
@@ -113,10 +113,10 @@
         <div class="col-lg-4">
           <a href="" class="text-decoration-none">
             <span class="h1 text-uppercase text-primary bg-dark px-2"
-              >Multi</span
+              >پوشاک</span
             >
             <span class="h1 text-uppercase text-dark bg-primary px-2 ml-n1"
-              >Shop</span
+              >عمده</span
             >
           </a>
         </div>
